검색 그리드뷰 붙이기 전
6월 26일 마감일 미준수…
오늘의 말씀을 잊지말자…
마감일을 가볍게 여기지 말자
여긴 학교가 아니다. 사회이다.
이런 일 또있으면 내 발로 나갈 각오하자

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="title_activity_check_list">CheckListAct</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <string name="empty">체크리스트를 추가하세요</string>
 
 </resources>
